syntax = "proto3";

option go_package = "/";


package proto;



message SendSmsCodeRequest {
  string mobile = 1;  // 手机号
}

message SendSmsCodeResponse {
  bool success = 1;   // 是否成功
  string message = 2; // 返回信息
}

message PhoneLoginRequest {
  string mobile = 1;  // 手机号
  string code = 2;   // 验证码
}

message PhoneLoginResponse {
  uint64  id = 1;   // id
  string message = 2; // 返回信息
 }


message VideoWorksRequest {
  string  Title=1;
  string Desc=2;
  uint64  MusicId=3;
  string WorkType=4;
  string  CheckStatus=5;
  uint64 CheckUser=6;
  string  IpAddress=7;
  string WorkPermission=8;
  uint64  LikeCount=9;
  uint64 CommentCount=10;
  uint64 ShareCount=11;
  uint64 CollectCount=12;
  uint64 BrowseCount=13;
}

message VideoWorksResponse {
  uint64  id = 1;   // id
  string message = 2; // 返回信息
}


message VideoListRequest {
  uint64 Page=1;
  uint64 Size=2;
}

message VideoListResponse {
  repeated ListWorks list=1;
}
message ListWorks{
  string  Title=1;
  string Desc=2;
  uint64  MusicId=3;
  string WorkType=4;
  string  CheckStatus=5;
  uint64 CheckUser=6;
  string  IpAddress=7;
  string WorkPermission=8;
  uint64  LikeCount=9;
  uint64 CommentCount=10;
  uint64 ShareCount=11;
  uint64 CollectCount=12;
  uint64 BrowseCount=13;
}
//评论更新
message UpdateVideoWorkCommentRequest {
  uint64 Id=1;
  uint64 WorkId=2;
  uint64 UserId=3;
  string Content=4;
  uint64 Tag=5;
  uint64 Pid=6;
}

message UpdateVideoWorkCommentResponse {
  bool   success = 1;   // 是否成功
  string message = 2; // 返回信息
}

//评论删除
message DeleteVideoWorkCommentRequest {
  uint64  Id=1;
}
message DeleteVideoWorkCommentResponse {
  bool   success = 1;   // 是否成功
  string message = 2; // 返回信息
}


//评论展示
message ListVideoWorkCommentRequest {

}
message ListVideoWorkCommentResponse {
  repeated ListComment list=1;
}
message ListComment{
  uint64  WorkId=1;
  uint64  UserId=2;
  string  Content=3;
  uint64  Tag=4;
  uint64  Pid=5;
}
//评论发布
message AddVideoWorkCommentRequest {
  uint64 WorkId=1;
  uint64 UserId=2;
  string Content=3;
  uint64 Tag=4;
  uint64 Pid=5;
}

message AddVideoWorkCommentResponse {
  bool   success = 1;   // 是否成功
  string message = 2; // 返回信息
}


//审核
message AnthorCheckRequest {
  uint64 UserId=1;
  string CheckStatus=2;
  string Remark=3;
}

message AnthorCheckResponse {
  bool   success = 1;   // 是否成功
  string message = 2; // 返回信息
}



service User {
  // 发送手机验证码
  rpc SendSmsCode (SendSmsCodeRequest) returns (SendSmsCodeResponse);
  // 手机号登录/注册
  rpc PhoneLogin (PhoneLoginRequest) returns (PhoneLoginResponse);
  //作品添加
  rpc VideoWorks (VideoWorksRequest) returns (VideoWorksResponse);
  //作品展示
  rpc VideoList (VideoListRequest) returns (VideoListResponse);
  //评论更新
  rpc  UpdateVideoWorkComment(UpdateVideoWorkCommentRequest) returns (UpdateVideoWorkCommentResponse);
  //评论删除
  rpc  DeleteVideoWorkComment(DeleteVideoWorkCommentRequest) returns (DeleteVideoWorkCommentResponse);
  //评论展示
  rpc ListVideoWorkComment (ListVideoWorkCommentRequest) returns (ListVideoWorkCommentResponse);
  //评论发布
  rpc  AddVideoWorkComment(AddVideoWorkCommentRequest) returns (AddVideoWorkCommentResponse);
  //审核
  rpc  AnthorCheck(AnthorCheckRequest) returns (AnthorCheckResponse);
}
